# learnogl

./: .gitignore  CMakeLists.txt  README.md  config.h.in  dependencies.sh  main.cpp  run.sh  setup.sh
libs/: CMakeLists.txt
libs/freetype/lib/: libfreetype.6.16.0.dylib
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/stb_image/: CMakeLists.txt
shaders/advanced_gl/01/: shader.fs
shaders/advanced_gl/02/: border.fs  shader.fs
shaders/advanced_gl/03/: grass.fs
shaders/advanced_gl/05/: frame.fs  frame.vs  shader.vs
shaders/advanced_gl/06/: cube.fs  cube.vs  skybox.fs  skybox.vs
shaders/advanced_gl/10/: instance.fs  instance.vs  model.fs  model.vs  rock.vs
shaders/breakout/: particle.fs  particle.vs  postprocess.fs  postprocess.vs  sprite.vs  text.vs
shaders/getting_started/06/: shader.fs  shader.vs
shaders/getting_started/07/: shader.vs
shaders/getting_started/08/: shader.fs  shader.vs
shaders/lighting/01/: cube.fs  light.fs
shaders/lighting/02/: cube.fs  cube.vs  light.vs
shaders/lighting/03/: cube.fs
shaders/lighting/04/: cube.fs  cube.vs
shaders/lighting/05/: cube.fs
shaders/lighting/06/: cube.fs  cube.vs
shaders/model_loading/: shader.fs  shader.vs
src/: CMakeLists.txt  hello.cpp  index.cpp
src/advanced_ogl/: 01_depth_testing.cpp  02_stencil_testing.cpp  03_blending.cpp  04_face_culling.cpp  05_framebuffers.cpp  06_cubemaps.cpp  10_instancing.cpp  CMakeLists.txt
src/breakout/: CMakeLists.txt  audio_manager.cpp  audio_manager.hpp  ball_object.cpp  ball_object.hpp  game.cpp  game.hpp  game_level.cpp  game_level.hpp  game_object.cpp  game_object.hpp  main.cpp  particle.cpp  particle.hpp  post_processor.cpp  post_processor.hpp  resource_manager.cpp  resource_manager.hpp  shader.cpp  shader.hpp  sprite_renderer.cpp  sprite_renderer.hpp  text_renderer.cpp  text_renderer.hpp  texture.cpp  texture.hpp
src/getting_started/: 03_hello_window.cpp  04_hello_triangle.cpp  05_shaders.cpp  06_textures.cpp  07_transforms.cpp  08_coordinate_system.cpp  09_camera.cpp  CMakeLists.txt
src/gl/: CMakeLists.txt  camera.cpp  camera.h  gl_utils.cpp  gl_utils.h  shader.cpp  shader.h
src/lighting/: 01_colors.cpp  02_basic_lighting.cpp  03_materials.cpp  04_lighting_maps.cpp  05_light_caster.cpp  06_multiple_lights.cpp  CMakeLists.txt
src/model_loading/: 03_model.cpp  CMakeLists.txt  mesh.cpp  mesh.h  model.cpp  model.h
src/utils/: CMakeLists.txt  file.cpp  file.h  log.h
